boat is driveable

--- a/pirates_of_the_bering_sea/pirates_of_the_bering_sea.vcxproj.filters
+++ b/pirates_of_the_bering_sea/pirates_of_the_bering_sea.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="OpenOcean.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PlayerShip.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -39,6 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="OpenOcean.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerShip.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
