--- a/pirates_of_the_bering_sea/pirates_of_the_bering_sea.vcxproj
+++ b/pirates_of_the_bering_sea/pirates_of_the_bering_sea.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="MainMenu.cpp" />
     <ClCompile Include="OpenOcean.cpp" />
     <ClCompile Include="pirates_of_the_bering_sea.cpp" />
+    <ClCompile Include="PlayerShip.cpp" />
     <ClCompile Include="SceneManager.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -167,6 +168,7 @@
   <ItemGroup>
     <ClInclude Include="MainMenu.h" />
     <ClInclude Include="OpenOcean.h" />
+    <ClInclude Include="PlayerShip.h" />
     <ClInclude Include="SceneManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
