--- a/pirates_of_the_bering_sea/pirates_of_the_bering_sea.vcxproj
+++ b/pirates_of_the_bering_sea/pirates_of_the_bering_sea.vcxproj
@@ -156,6 +156,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Bouy.cpp" />
     <ClCompile Include="MainMenu.cpp" />
     <ClCompile Include="OpenOcean.cpp" />
     <ClCompile Include="pirates_of_the_bering_sea.cpp" />
@@ -166,6 +167,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Bouy.h" />
     <ClInclude Include="MainMenu.h" />
     <ClInclude Include="OpenOcean.h" />
     <ClInclude Include="PlayerShip.h" />
