created singleton clock object

--- a/pirates_of_the_bering_sea/pirates_of_the_bering_sea.vcxproj
+++ b/pirates_of_the_bering_sea/pirates_of_the_bering_sea.vcxproj
@@ -80,6 +80,13 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
+    <Allegro_AddonImage>true</Allegro_AddonImage>
+    <Allegro_AddonTTF>true</Allegro_AddonTTF>
+    <Allegro_AddonPrimitives>true</Allegro_AddonPrimitives>
+    <Allegro_AddonAudio>true</Allegro_AddonAudio>
+    <Allegro_AddonAcodec>true</Allegro_AddonAcodec>
+    <Allegro_AddonDialog>true</Allegro_AddonDialog>
+    <Allegro_AddonFont>true</Allegro_AddonFont>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -157,6 +164,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Bouy.cpp" />
+    <ClCompile Include="ClockObjectSingleton.cpp" />
     <ClCompile Include="MainMenu.cpp" />
     <ClCompile Include="OpenOcean.cpp" />
     <ClCompile Include="pirates_of_the_bering_sea.cpp" />
@@ -164,14 +172,15 @@
     <ClCompile Include="SceneManager.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
     <ClInclude Include="Bouy.h" />
+    <ClInclude Include="ClockObjectSingleton.h" />
     <ClInclude Include="MainMenu.h" />
     <ClInclude Include="OpenOcean.h" />
     <ClInclude Include="PlayerShip.h" />
     <ClInclude Include="SceneManager.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
